devscripts (2.9.8) UNRELEASED; urgency=low

  [ Julian Gilbey ]
  * bts: don't require user for usertags (Closes: #326560)
  * bts: fix manpage typos (Closes: #328972, #328974, #328477)
  * bts: fix bug in getting timestamps
  * dd-list: support displaying uploaders with new --uploaders/-u option
    (Closes: #328459)
  * uscan: correctly handle version 2 watchfiles with multiple groups
    (Closes: #327258)
  * uupdate: handle csae of debian/ directory in upstream sources (Closes:
    #320836)
  * don't allow non-bash scripts in the package (Closes: #331223)

  [ Joey Hess ]
  * debchange: -r needs to enable multi-maintainer markers when releasing a
    package if the releaser is not the same as the only person who made any
    changes.

  [ Joshua Kwan ]
  * Clarify annotate-output sub-description in control file.

 -- Joshua Kwan <joshk@triplehelix.org>  Thu,  6 Oct 2005 15:03:10 -0700

devscripts (2.9.7) unstable; urgency=low

  * bts: oops, left out a space in usertags command

 -- Julian Gilbey <jdg@polya.uklinux.net>  Sun,  4 Sep 2005 01:51:24 +0100

devscripts (2.9.6) unstable; urgency=low
  
  [ Julian Gilbey ]
  * bts: tags: revert change in 2.9: reinstate "fixed-in-experimental" (it
    still appears to be in use) and don't need "help" twice (Closes: #325480)
  * bts: show/cache: lots of changes to make compatible with new BTS HTML
    pages (Closes: #325966)
    Also store devscripts version with cached files, so that such changes
    can be handled more smoothly in future.
  * bts: small cleanups for output messages, minor bugfixes etc.
  * bts: introduce spam command to report spam in bug reports
  * bts: support new user/usertags commands (Closes: #326265)
  * checkbashisms: correctly detect "function" keyword (Closes: #324599)
  * uscan: report on package being scanned when --report is used (Closes:
    #324102)
  * uscan: provide --report-status option to distinguish from --report,
    which is now quieter (Closes: #325097, #325980)
